# Habit-Tracker-App

./: .env  .envexample  Docker-compose.yml  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 68adbf4b422b_add_phone_column_to_users.py  bcb941eb3ca8_init.py
app/core/: config.py  database.py  dependencies.py  initial_data.py  mail.py  security.py
app/features/admin/: routers.py
app/features/auth/: routers.py  services.py
app/features/habits/: models.py  routers.py  schemas.py  services.py
app/features/password_reset/: routers.py  schemas.py  services.py
app/features/users/: models.py  routers.py  schemas.py  services.py
app/features/utils/: periods.py
app/static/: style.css
app/static/js/: base.js
app/templates/: base.html  change_password.html  edit_habit.html  forgot_password.html  habits.html  login.html  profile.html  register.html  reset_password.html
app/templates/admin/: edit_user.html  habits.html  users.html
